2006-10-23  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/controllers/atom_controller.rb (AtomController::feed): Fix to wrong article to show.
	* donrails/app/views/layouts/default/notes.rhtml: Fix link. likewise.
	* donrails/app/models/article_sweeper.rb (ArticleSweeper::ep_atom): Fix it. likewise.
	* donrails/config/routes.rb: Fix url map. likewise. 
	* donrails/app/views/atom/index.rxml: Fix link. likewise. 
	* donrails/app/views/atom/feed.rxml: Fix link. likewise. 

	* donrails/app/controllers/login_controller.rb (LoginController::add_article): Fix typo.

	* donrails/config/routes.rb: Fix for show_category_noteslist entry.

	* donrails/test/integration/cache_test.rb (CacheTest::test_caching_notes): Fix test path.

2006-10-22  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/test/integration/browse_mt_test.rb (BrowseStoryTest::test_fromtop): Fix test path.

	* donrails/config/routes.rb: Change URL /archives/rdf_(.+) to /rdf/rdf_$1.
	* donrails/app/models/article_sweeper.rb (ArticleSweeper::ep_category): likewise.

2006-10-21  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/config/routes.rb: Change URL /notes/ to /archives/. 
	* donrails/app/models/article_sweeper.rb: likewise.
	
	* donrails/app/models/article_sweeper.rb 
	(ArticleSweeper::expire_for): Split following methods.
	(ArticleSweeper::ep_trigger_title_a): New method.
	(ArticleSweeper::ep_atom): New method.
	(ArticleSweeper::ep_category): New method.
	(ArticleSweeper::ep_articles_long): New method.
	(ArticleSweeper::ep_author): New method.
	(ArticleSweeper::ep_notes): New method.

	* donrails/app/models/article.rb (Article::renew_mtime): Fix: When article_date is not setted, this method set it.

	* donrails/app/views/login/manage_don_rbl.rhtml: Cleanup.

	* donrails/app/controllers/login_controller.rb (LoginController::manage_don_rbl): Cleanup.

	* donrails/app/views/shared/edit_don_rbl.rhtml (rbl_type): Change to use <select>.
